[package]
name = "cesa_conn_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cesa_conn_networker"
path = "src/cesa_conn_networker.rs"

[dependencies]
btleplug = "0.11.8"
tokio = { version = "1.50.0", features = ["full"] }
cesa_conn_crypto = { path = "../cesa_conn_crypto" }
futures = "0.3.32"
tokio-util = "0.7.18"
